--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,3 +1,12 @@
+v4.11.17.0 (2020-07-29)
+- Fix: Removed duplicated methods updated device manager and detector.
+- New: Added "WingManTeam DX Tweak" tool and button for raw and direct input calibration.
+- Update: Hardware control. Added ability to remove offline, problem or unknown devices
+
+v4.11.15.0 (2020-07-26)
+- Fix: Missing Vendor, Product and Revision for some devices.
+- Fix: XInput value jittering between 0 and -1 when DeadZone is set.
+
 v4.11.15.0 (2020-07-26)
 - Fix: Missing Vendor, Product and Revision for some devices.
 - Fix: XInput value jittering between 0 and -1 when DeadZone is set.
