New: Device connection type icon: Bluetooth, USB, System/Virtual.

--- a/x360ce.App.Beta/Controls/UserDevicesUserControl.resx
+++ b/x360ce.App.Beta/Controls/UserDevicesUserControl.resx
@@ -120,6 +120,9 @@
   <metadata name="IsOnlineColumn.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="ConnectionClassColumn.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="IsEnabledColumn.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
