--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,6 +1,8 @@
-v4.11.17.0 (2020-07-29)
+v4.11.22.0 (2020-08-01)
 - Fix: Removed duplicated methods updated device manager and detector.
+- Fix: Rare app crash when device swiched off.
 - New: Added "WingManTeam DX Tweak" tool and button for raw and direct input calibration.
+- New: Device connection type icon: Bluetooth, USB, System/Virtual.
 - Update: Hardware control. Added ability to remove offline, problem or unknown devices
 
 v4.11.15.0 (2020-07-26)
