--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,3 +1,6 @@
+v4.12.7.0 (2020-08-02)
+- Fix: Server side bug was causing client fail and upload settings to cloud forever.
+
 v4.12.6.0 (2020-08-01)
 - Fix: Removed duplicated methods updated device manager and detector.
 - Fix: Rare app crash when device switched off.
