--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,3 +1,6 @@
+v4.12.9.0 (2020-08-03)
+- Fix: Unable to log errors (C:\ProgramData\X360CE\Errors)
+
 v4.12.8.0 (2020-08-02)
 - Fix: Server side bug was causing client fail and upload settings to cloud forever.
 - Fix: Bug which allowed to send settings to cloud until success (4 attempts max now).
