--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,3 +1,6 @@
+v4.13.12.0 (2020-08-21)
+- Fix: Issue with text encoding on error report.
+
 v4.13.11.0 (2020-08-20)
 - New: Add application error status indicator and report form.
 - Fix: Silent internal crash in direct input code when device removed.
