--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,4 +1,5 @@
-v4.13.12.0 (2020-08-21)
+v4.13.13.0 (2020-08-25)
+- Fix: System.TimeoutException: The operation has timed out.
 - Fix: Issue with text encoding on error report.
 
 v4.13.11.0 (2020-08-20)
