--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,6 +1,7 @@
-v4.13.13.0 (2020-08-25)
+v4.13.14.0 (2020-08-25)
 - Fix: System.TimeoutException: The operation has timed out.
 - Fix: Issue with text encoding on error report.
+- Fix: Reporting first chance handled exceptions unnecessary.
 
 v4.13.11.0 (2020-08-20)
 - New: Add application error status indicator and report form.
