--- a/x360ce.App.Beta/Documents/ChangeLog.txt
+++ b/x360ce.App.Beta/Documents/ChangeLog.txt
@@ -1,3 +1,7 @@
+v4.13.21.0 (2020-09-01)
+- Fix: Crash when game is not selected.
+- Fix: Fixing multi-threading exceptions.
+
 v4.13.19.0 (2020-08-29)
 - Fix: System.TimeoutException: The operation has timed out.
 - Fix: Issue with text encoding on error report.
